# fieldgame-rust

./: Cargo.toml
src/: cuboid.rs  face.rs  main.rs  mesh.rs  quaternion.rs  r3.rs  render.rs
src/r3/: mod.rs  pose.rs  quaternion.rs  r3.rs
